Readjusted CSS layout to fix overlapping elements on zoom

--- a/style.css
+++ b/style.css
@@ -7,27 +7,42 @@ html, body{
 	height: 100%
 }
 
+body {
+	min-width: 900px;
+	overflow: scroll;
+}
+
+
 #header {
-	position: absolute;
-	top: 20px;
-	width: 100%;
+	position: relative;
 	height: 64px;
 }
 
 #logo {	
-	padding-left: 13px;
-	padding-right: 12px;
+	position: absolute;
+	height: 100%;
 }
 
 img {
-	width: 120px;
 	height: 44px;
+	padding-top: 20px;
+	padding-left: 13px;
+	padding-right: 10px;
 }
 
 #search-bar {
-	height: 64px;
+	position: absolute;
+	left: 143px;
+	height: 100%;
+
 }
 
 #search-box {
 	width: 632px;
+}
+
+#buttons-top {
+	position: absolute;
+	right: 20px;
+	height: 100%;
 }
